@@ -29,6 +29,7 @@ static char options_prompt_rename_rec(const custom_prompt_t *details);
 static char options_prompt_overwrite(const custom_prompt_t *details);
 static char options_prompt_abort(const custom_prompt_t *details);
 static char options_prompt_skip_all(const custom_prompt_t *details);
+static char options_prompt_merge(const custom_prompt_t *details);
 static char cm_overwrite(const custom_prompt_t *details);
 static char cm_no(const custom_prompt_t *details);
 static char cm_skip(const custom_prompt_t *details);
@@ -37,6 +38,8 @@ static void double_clash_with_put(int move);
 
 static fo_prompt_cb rename_cb;
 static int options_count;
+static int merge_prompt_count;
+static int yes_prompt_count;
 
 static char *saved_cwd;
 
@@ -117,6 +120,19 @@ static char
 options_prompt_skip_all(const custom_prompt_t *details)
 {
 	return 'S';
+}
+
+static char
+options_prompt_merge(const custom_prompt_t *details)
+{
+	if(merge_prompt_count == 0)
+	{
+		++merge_prompt_count;
+		return 'm';
+	}
+
+	++yes_prompt_count;
+	return 'y';
 }
 
 static char
@@ -716,6 +732,70 @@ TEST(no_merge_options_on_putting_links)
 	assert_success(rmdir(SANDBOX_PATH "/dir/sub"));
 	assert_success(rmdir(SANDBOX_PATH "/dir"));
 	assert_success(rmdir(SANDBOX_PATH "/sub"));
+}
+
+TEST(merging_on_copy_confirms_overwrites)
+{
+	create_dir(SANDBOX_PATH "/from");
+	create_dir(SANDBOX_PATH "/from/dir");
+	create_file(SANDBOX_PATH "/from/dir/file");
+
+	create_dir(SANDBOX_PATH "/to");
+	create_dir(SANDBOX_PATH "/to/dir");
+	create_file(SANDBOX_PATH "/to/dir/file");
+
+	make_abs_path(lwin.curr_dir, sizeof(lwin.curr_dir), SANDBOX_PATH, "to",
+			saved_cwd);
+
+	char path[PATH_MAX + 1];
+	make_abs_path(path, sizeof(path), SANDBOX_PATH, "from/dir", saved_cwd);
+	assert_success(regs_append('a', path));
+
+	fops_init(&line_prompt, &options_prompt_merge);
+	merge_prompt_count = 0;
+	yes_prompt_count = 0;
+
+	(void)fops_put(&lwin, /*at=*/-1, /*reg_name=*/'a', /*move=*/0);
+	assert_int_equal(1, merge_prompt_count);
+	assert_int_equal(1, yes_prompt_count);
+
+	assert_success(unlink(SANDBOX_PATH "/from/dir/file"));
+	assert_success(rmdir(SANDBOX_PATH "/from/dir"));
+	assert_success(rmdir(SANDBOX_PATH "/from"));
+	assert_success(unlink(SANDBOX_PATH "/to/dir/file"));
+	assert_success(rmdir(SANDBOX_PATH "/to/dir"));
+	assert_success(rmdir(SANDBOX_PATH "/to"));
+}
+
+TEST(merging_on_move_confirms_overwrites)
+{
+	create_dir(SANDBOX_PATH "/from");
+	create_dir(SANDBOX_PATH "/from/dir");
+	create_file(SANDBOX_PATH "/from/dir/file");
+
+	create_dir(SANDBOX_PATH "/to");
+	create_dir(SANDBOX_PATH "/to/dir");
+	create_file(SANDBOX_PATH "/to/dir/file");
+
+	make_abs_path(lwin.curr_dir, sizeof(lwin.curr_dir), SANDBOX_PATH, "to",
+			saved_cwd);
+
+	char path[PATH_MAX + 1];
+	make_abs_path(path, sizeof(path), SANDBOX_PATH, "from/dir", saved_cwd);
+	assert_success(regs_append('a', path));
+
+	fops_init(&line_prompt, &options_prompt_merge);
+	merge_prompt_count = 0;
+	yes_prompt_count = 0;
+
+	(void)fops_put(&lwin, /*at=*/-1, /*reg_name=*/'a', /*move=*/1);
+	assert_int_equal(1, merge_prompt_count);
+	assert_int_equal(1, yes_prompt_count);
+
+	assert_success(unlink(SANDBOX_PATH "/to/dir/file"));
+	assert_success(rmdir(SANDBOX_PATH "/to/dir"));
+	assert_success(rmdir(SANDBOX_PATH "/to"));
+	assert_success(rmdir(SANDBOX_PATH "/from"));
 }
 
 /* vim: set tabstop=2 softtabstop=2 shiftwidth=2 noexpandtab cinoptions-=(0 : */
